refactor: use null instead of optionals, add tests, doc, remove old endpoint
Optionals work, but in our case we just can do with null checks and those are faster than optionals. We can also tell IDEA to use javax.annotations for its code inspection.

The GET /data endpoint was unused and just adding complexity.
